src/tests/snapshots/tera__tests__parser__parser_errors@unknown_tag.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/unknown_tag.txt
---
 Syntax error --> [unknown_tag.txt:1:4]
  |
1 | i.{%a.
  |     ^---
  = Unknown tag
        
