src/tests/snapshots/tera__tests__parser__parser_expressions_success@idents.txt.snap
---
source: src/tests/parser.rs
expression: Expressions(expr_nodes)
input_file: src/tests/parser_inputs/success/expr/idents.txt
---
hello
hello_
hello_1
HELLO
_1
hey.ho
h
ho
hey.ho.hu
h.u
hey.ho.hu
hey[0]
hey[a[0]]
hey['ho']['hu']
hey['ho']['hu']['hi']
h['u'].x[0]
h['u'].x[0].ah

