src/tests/snapshots/tera__tests__parser__parser_tags_success@blocks.txt.snap
---
source: src/tests/parser.rs
expression: "&res_nodes"
input_file: src/tests/parser_inputs/success/blocks.txt
---
[
    Block {
        name: "start",
        body: [
            "Hello ",
            Var {
                name: "world",
            } @ 2:8-2:13 (27..32),
            "!\n  ",
            Block {
                name: "nested",
                body: [
                    "\n    Even nested!\n  ",
                ],
            },
        ],
    },
    Block {
        name: "second",
        body: [
            FunctionCall {
                name: "super",
                kwargs: {},
            } @ 8:31-8:38 (139..146),
        ],
    },
]
