src/tests/snapshots/tera__tests__parser__parser_tags_success@filter_section.txt.snap
---
source: src/tests/parser.rs
expression: "&res_nodes"
input_file: src/tests/parser_inputs/success/filter_section.txt
---
[
    FilterSection {
        name: "safe" @ 1:10-1:14 (10..14),
        kwargs: {},
        body: [
            " hello ",
        ],
    },
    FilterSection {
        name: "upper" @ 2:10-2:15 (50..55),
        kwargs: {
            "hey": 1 @ 2:20-2:21 (60..61),
        },
        body: [
            "hello",
        ],
    },
    FilterSection {
        name: "upper" @ 3:10-3:15 (100..105),
        kwargs: {
            "hey": 1 @ 3:20-3:21 (110..111),
        },
        body: [
            If {
                expr: true @ 3:32-3:36 (122..126),
                body: [
                    "a",
                ],
                false_body: [],
            },
        ],
    },
]
