src/tests/snapshots/tera__tests__parser__parser_tags_success@if.txt.snap
---
source: src/tests/parser.rs
expression: "&res_nodes"
input_file: src/tests/parser_inputs/success/if.txt
---
[
    If {
        expr: true @ 1:6-1:10 (6..10),
        body: [
            "Hello",
        ],
        false_body: [
            If {
                expr: false @ 1:30-1:35 (30..35),
                body: [
                    "otherwise",
                ],
                false_body: [],
            },
            If {
                expr: Var {
                    name: "b",
                } @ 1:57-1:58 (57..58),
                body: [
                    "ELIF",
                ],
                false_body: [
                    Var {
                        name: "world",
                    } @ 1:79-1:84 (79..84),
                ],
            },
        ],
    },
    If {
        expr: Var {
            name: "something",
        } @ 2:6-2:15 (106..115),
        body: [
            "hello",
        ],
        false_body: [],
    },
    If {
        expr: Var {
            name: "something",
        } @ 3:6-3:15 (141..150),
        body: [
            "hello",
        ],
        false_body: [
            "arr",
        ],
    },
]
