src/tests/snapshots/tera__tests__parser__parser_tags_success@includes.txt.snap
---
source: src/tests/parser.rs
expression: "&res_nodes"
input_file: src/tests/parser_inputs/success/tags/includes.txt
---
[
    Include {
        name: "a.html",
    },
    Include {
        name: "a.html",
    },
    Include {
        name: "a.html",
    },
]
