src/tests/snapshots/tera__tests__parser__parser_tags_success@set.txt.snap
---
source: src/tests/parser.rs
expression: "&res_nodes"
input_file: src/tests/parser_inputs/success/set.txt
---
[
    Set {
        name: "a",
        value: 1 @ 1:11-1:12 (11..12),
        global: false,
    },
    Set {
        name: "a",
        value: Filter {
            expr: BinaryOperation {
                op: Plus,
                left: Var {
                    name: "b",
                } @ 2:12-2:13 (28..29),
                right: 1 @ 2:16-2:17 (32..33),
            } @ 2:12-2:18 (28..34),
            name: "round",
            kwargs: {},
        } @ 2:21-2:26 (37..42),
        global: false,
    },
    Set {
        name: "a",
        value: "hi" @ 3:11-3:15 (57..61),
        global: false,
    },
    Set {
        name: "a",
        value: MacroCall {
            namespace: "macros",
            name: "something",
            kwargs: {},
        } @ 4:11-4:30 (76..95),
        global: false,
    },
    Set {
        name: "a",
        value: FunctionCall {
            name: "utcnow",
            kwargs: {},
        } @ 5:11-5:19 (110..118),
        global: false,
    },
    Set {
        name: "a",
        value: [
            I64(
                1,
            ),
            Bool(
                true,
            ),
            String(
                "hello",
            ),
        ] @ 6:11-6:29 (133..151),
        global: false,
    },
    Set {
        name: "a",
        value: [
            I64(
                1,
            ),
            Bool(
                true,
            ),
            Array(
                [
                    I64(
                        1,
                    ),
                    I64(
                        2,
                    ),
                ],
            ),
        ] @ 7:11-7:27 (166..182),
        global: false,
    },
    Set {
        name: "a",
        value: 1 @ 8:18-8:19 (204..205),
        global: true,
    },
    BlockSet {
        name: "body",
        filters: [
            Filter {
                expr: () @ 9:12-9:13 (221..222),
                name: "upper",
                kwargs: {},
            } @ 9:14-9:19 (223..228),
        ],
        body: [
            "Hello",
        ],
        global: false,
    },
    BlockSet {
        name: "body",
        filters: [
            Filter {
                expr: () @ 10:19-10:20 (268..269),
                name: "upper",
                kwargs: {
                    "with": 1 @ 10:32-10:33 (281..282),
                },
            } @ 10:21-10:34 (270..283),
            Filter {
                expr: () @ 10:35-10:36 (284..285),
                name: "trans",
                kwargs: {
                    "lang": "fr" @ 10:48-10:52 (297..301),
                },
            } @ 10:37-10:53 (286..302),
        ],
        body: [
            "Hello",
        ],
        global: true,
    },
    Set {
        name: "value",
        value: {
            String(
                "hello",
            ): I64(
                0,
            ),
        } @ 11:15-11:27 (338..350),
        global: false,
    },
    Set {
        name: "value",
        value: Map {
            items: {
                "hello": Var {
                    name: "data",
                } @ 12:25-12:29 (379..383),
            },
        } @ 12:15-12:30 (369..384),
        global: false,
    },
]
