src/tests/snapshots/tera__tests__parser__parser_templates_success@macro_import_with_extends.txt.snap
---
source: src/tests/parser.rs
expression: "&nodes"
input_file: src/tests/parser_inputs/success/tpl/macro_import_with_extends.txt
---
[]
