src/tests/snapshots/tera__tests__parser__parser_templates_success@tpl_simple.txt.snap
---
source: src/tests/parser.rs
expression: "&nodes"
input_file: src/tests/parser_inputs/success/tpl_simple.txt
---
[
    "<html>\n  ",
    "\n  <head>\n    <title>",
    GetAttr {
        expr: Var {
            name: "product",
        } @ 4:14-4:21 (51..58),
        name: "name",
    } @ 4:22-4:26 (59..63),
    "</title>\n  </head>\n  <body>\n    <h1>",
    GetAttr {
        expr: Var {
            name: "product",
        } @ 7:11-7:18 (105..112),
        name: "name",
    } @ 7:19-7:23 (113..117),
    " - ",
    Filter {
        expr: GetAttr {
            expr: Var {
                name: "product",
            } @ 7:32-7:39 (126..133),
            name: "manufacturer",
        } @ 7:40-7:52 (134..146),
        name: "upper",
        kwargs: {},
    } @ 7:55-7:60 (149..154),
    "</h1>\n    <p>",
    GetAttr {
        expr: Var {
            name: "product",
        } @ 8:10-8:17 (173..180),
        name: "summary",
    } @ 8:18-8:25 (181..188),
    "</p>\n    <p>£",
    BinaryOperation {
        op: Mul,
        left: GetAttr {
            expr: Var {
                name: "product",
            } @ 9:11-9:18 (207..214),
            name: "price",
        } @ 9:19-9:24 (215..220),
        right: 1.2 @ 9:27-9:31 (223..227),
    } @ 9:11-9:31 (207..227),
    " (VAT inc.)</p>\n    <p>Look at reviews from your friends ",
    Var {
        name: "username",
    } @ 10:44-10:52 (290..298),
    "</p>\n    <button>Buy!</button>\n  </body>\n</html>",
]
